# phantom

./: .gitignore  Cargo.toml  README.md
crates/phantom-backends/: Cargo.toml  README.md
crates/phantom-backends/src/: elf.rs  error.rs  lib.rs
crates/phantom-cli/: Cargo.toml  README.md
crates/phantom-cli/src/: cli.rs  lib.rs  main.rs  profiles.rs
crates/phantom-cli/src/commands/: info.rs  inspect.rs  mod.rs  profiles.rs  protect.rs
crates/phantom-cli/tests/: profile_cli.rs  roundtrip.rs  string_encryption.rs
crates/phantom-cli/tests/common/: mod.rs
crates/phantom-core/: Cargo.toml  README.md
crates/phantom-core/src/: error.rs  lib.rs  pass.rs  pipeline.rs
crates/phantom-core/src/ir/: block.rs  display.rs  function.rs  instruction.rs  mod.rs  module.rs  types.rs
crates/phantom-disasm/: Cargo.toml  README.md
crates/phantom-disasm/src/: error.rs  iced.rs  lib.rs
crates/phantom-frontends/: Cargo.toml  README.md
crates/phantom-frontends/src/: elf.rs  error.rs  lib.rs
crates/phantom-passes/: Cargo.toml  README.md
crates/phantom-passes/src/: lib.rs  string_encryption.rs
tests/fixtures/: README.md  build_fixtures.py  build_fixtures.sh  hello_x86_64  manifest.toml  run_obfuscation_matrix.py
tests/fixtures/src/: banner_messages.c  checksum_report.c  command_router.c  config_merge.c  csv_stats.c  error_paths.c  function_pointer_menu.c  mini_vm.c  state_machine_parser.c  string_table_lookup.c
tests/integration/: roundtrip_test.rs  string_encryption_test.rs
