[workspace]
members = [
    "crates/phantom-core",
    "crates/phantom-disasm",
    "crates/phantom-frontends",
    "crates/phantom-backends",
    "crates/phantom-passes",
    "crates/phantom-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# IR and parsing
goblin = "0.10"
iced-x86 = "1.21"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
rand = "0.8"

# Internal crates
phantom-core = { path = "crates/phantom-core" }
phantom-disasm = { path = "crates/phantom-disasm" }
phantom-frontends = { path = "crates/phantom-frontends" }
phantom-backends = { path = "crates/phantom-backends" }
phantom-passes = { path = "crates/phantom-passes" }
