[package]
name = "phantom-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary emitters (PhIR to ELF/PE/Mach-O) for Phantom"

[dependencies]
phantom-core.workspace = true
phantom-disasm.workspace = true
iced-x86.workspace = true
thiserror.workspace = true
tracing.workspace = true
