[package]
name = "phantom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for Phantom code protector"

[dependencies]
phantom-core.workspace = true
phantom-disasm.workspace = true
phantom-frontends.workspace = true
phantom-backends.workspace = true
phantom-passes.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
