[package]
name = "phantom-frontends"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary lifters (ELF/PE/Mach-O to PhIR) for Phantom"

[dependencies]
phantom-core.workspace = true
phantom-disasm.workspace = true
goblin.workspace = true
iced-x86.workspace = true
thiserror.workspace = true
tracing.workspace = true
