[package]
name = "phantom-passes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transform passes (obfuscation, encryption, etc.) for Phantom"

[dependencies]
phantom-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
